# anncsu-sdk

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml
.github/workflows/: publish.yml
.speakeasy/: gen.yaml  out.accessi.openapi.yaml  out.coordinate.openapi.yaml  out.odonimi.openapi.yaml  workflow.yaml
docs/: CLI.md  SECURITY.md  VALIDATION.md  sdk-accessi.md  sdk-coordinate.md  sdk-odonimi.md  sdk-pa.md  speakeasy.md
oas/: README.md
oas/dev/: Specifica API - ANNCSU - Aggiornamento accessi.yaml  Specifica API - ANNCSU - Aggiornamento coordinate massivo.yml  Specifica API - ANNCSU - Aggiornamento coordinate.yml  Specifica API - ANNCSU - Aggiornamento odonimi.yaml
scripts/: create_client_assertion.py  post_speakeasy_generation.py
tests/: conftest.py  test_post_speakeasy_generation.py
tests/accessi/: test_accesso_validation.py  test_do_request_signature.py  test_imports.py
tests/cli/: __init__.py  conftest.py  test_accesso.py  test_assertion.py  test_auth.py  test_config.py  test_coordinate.py  test_coordinate_bulk.py  test_duckdb_batch.py  test_main.py  test_odonimo.py  test_pa.py  test_raw_output.py  test_token_endpoint_resolution.py
tests/common/: test_auth_modi_integration.py  test_cli_env_override.py  test_config.py  test_imports.py  test_modi.py  test_modi_hook.py  test_pdnd_assertion.py  test_pdnd_auth_manager.py  test_pdnd_token.py  test_security.py  test_security_basemodel.py  test_session.py  test_token_validation_hook.py
tests/coordinate/: test_coordinate_validation.py  test_imports.py  test_risposta_validation.py  (+1 more)
(+186 files in other folders)
