[project]
name = "anncsu-sdk"
dynamic = ["version"]
description = "ANNCSU Software Development Kit for API consumption"
readme = "README.md"
authors = [
    { name = "Francesco Bartoli", email = "francesco.bartoli@geobeyond.it" },
]
requires-python = ">=3.12"
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.0",
    "pydantic >=2.13.4",
    "authlib>=1.7.2",
    "pydantic-settings>=2.14.0",
    "typer>=0.25.0",
    "rich>=15.0.0",
    "duckdb>=1.5.2",
]

[project.scripts]
anncsu = "anncsu.cli:app"
[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.2.1",
    "pytest-httpx>=0.35.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.14.6",
    "uv-dynamic-versioning>=0.11.0",
    "openapi-pydantic>=0.4.1",
    "pyyaml>=6.0.0",
    "faker>=38.2.0",
    "polyfactory>=3.1.0",
    "hypothesis>=6.148.3",
    "ipython>=9.7.0",
    "typer>=0.15.0",
]
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
[tool.uv.build-backend]
module-name = "anncsu"
module-root = "src"
[tool.hatch.version]
source = "uv-dynamic-versioning"
[tool.hatch.build.targets.wheel]
packages = ["src/anncsu"]
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"
# Disable local version identifiers for PyPI compatibility
metadata = false
[tool.ruff.lint]
extend-select = ["B"]
extend-ignore = ["B026"]
[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=anncsu"
